--- a/development/sass/styles.scss
+++ b/development/sass/styles.scss
@@ -1,3 +1,26 @@
 body{
-	background:none blue;
+	background:none red;
+}
+
+.gridBasicDemo .row{
+	margin-bottom:10px;
+	.col{
+		background:none #ccc;
+		padding:8px 13px;
+		border:1px solid #333; 
+	}
+}
+
+.col{
+	padding:10px 15px;
+}
+
+$baseColumnCount: 12;
+$i: 1;
+
+@while $i < ($baseColumnCount+1){
+	.md-#{$i}{
+		width:percentage(100/(($baseColumnCount+1)-$i));
+		$i: $i - 1;
+	}
 }
