Grunt hammered out. Basic grid begun...

--- a/development/sass/modules/layout/_layoutMixins.scss
+++ b/development/sass/modules/layout/_layoutMixins.scss
@@ -1,1 +1,11 @@
-$SassLayoutMixinFile:"commentOut";
+@import "layoutVariables";
+@import "layoutFunctions";
+
+// 768 992 1200
+// wrapper > row > col md-#
+
+@mixin defaultSmallLayout{
+	.wrapper{
+		padding:$defaultHorizontalPadding + px $defaultVerticalPadding + px;
+	}
+}
