--- a/development/sass/styles.scss
+++ b/development/sass/styles.scss
@@ -1,5 +1,5 @@
-@import "base";
-@import "layout";
+@import "partials/base";
+@import "partials/layout";
 
 
 body{
@@ -12,7 +12,6 @@ body{
 	}
 	.col{
 		background:none #ccc;
-		border:1px solid #333;
 	}
 }
 
