--- a/development/sass/modules/layout/_layoutVariables.scss
+++ b/development/sass/modules/layout/_layoutVariables.scss
@@ -23,3 +23,8 @@ $largeDefaultMajor:1200 !default;
 
 $layoutColumnCount:12 !default;
 $layoutNestedRows:true !default;
+$layoutOffsetUnits:false!default;
+
+// Options
+
+$layoutOffsetUnits:true;
