--- a/development/sass/modules/layout/_layoutMixins.scss
+++ b/development/sass/modules/layout/_layoutMixins.scss
@@ -20,6 +20,22 @@
     }
 }
 
+@function myWidth($myAttribute){
+  @return quote($myAttribute);
+}
+
+@mixin layoutOffsetUnits {
+    @if $layoutOffsetUnits == true{
+      $i: 1;
+      @while $i <= $layoutColumnCount {
+          .md-offset-#{$i}{
+            margin-left:percentage($i/$layoutColumnCount);
+        }
+        $i: $i + 1;
+    }
+  }
+}
+
 @mixin layoutNestedRows{
    @if $layoutNestedRows == true{
      .row .row{
