--- a/development/sass/modules/layout/_layoutFunctions.scss
+++ b/development/sass/modules/layout/_layoutFunctions.scss
@@ -1,5 +1,5 @@
-@import "layoutVariables";
-
+//@import "layoutVariables";
+/*
 @mixin layoutColumnGen {
     $i: 1;
     @while $i <= $layoutColumnCount {
@@ -9,3 +9,4 @@
         $i: $i + 1;
     }
 }
+*/
